--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "desafio_03",
+  "name": "entrega_01",
   "version": "1.0.0",
   "description": "",
-  "type":"module",
-  "main": "index.js",
+  "type": "module",
+  "main": "app.js",
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
@@ -22,6 +22,7 @@
     "encodeurl": "^1.0.2",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
+    "expres": "^0.0.5",
     "express": "^4.18.2",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
@@ -67,7 +68,6 @@
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
